--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <title>Welcome to the Mojolicious real-time web framework!</title>
+  	<meta charset="UTF-8">
+    <title>Diving Log TopPage</title>
+    <meta name="description" content="Diving Logのトップページです。">
   </head>
   <body>
-    <h2>Welcome to the Mojolicious real-time web framework!</h2>
+    <h2>Diving Log TopPage</h2>
+    <hr>
+
+    <ul>
+        <li><a href="/Create.html">Create New log</a></li>
+        <br>
+        <li><a href="/ShowLog.html">Show Log</a></li>
+    </ul>
+    <!--<h2>Welcome to the Mojolicious real-time web framework!</h2>
     This is the static document "public/index.html",
-    <a href="/">click here</a> to get back to the start.
+    <a href="/">click here</a> to get back to the start.-->
   </body>
 </html>
